--- a/clone.html
+++ b/clone.html
@@ -21,7 +21,24 @@
         ></span>
       </div>
     </header>
+    <div>
+      <img src="banner.png" class="screen-banner" />
+    </div>
 
+    <nav class="nav">
+      <ul class="nav__list">
+        <li class="nav__btn">
+          <button class="btn"><a href="www.naver.com">ALL</a></button>
+        </li>
+        <li class="nav__btn">COFFEE</li>
+        <li class="nav__btn">BEVERAGE</li>
+        <li class="nav__btn">TEA</li>
+        <li class="nav__btn">DESSERT</li>
+        <li class="nav__btn">BAKERY</li>
+      </ul>
+    </nav>
+
+    <div class="screen-pic"><img src="coffee.png" /></div>
     <script
       44
       src="https://kit.fontawesome.com/6478f529f2.js"
